--- a/photo-showdown-frontend/src/app/users/user-registration/user-registration.component.html
+++ b/photo-showdown-frontend/src/app/users/user-registration/user-registration.component.html
@@ -2,12 +2,11 @@
 <form class="form" (submit)="onSubmit(userForm)" #userForm="ngForm">
 
   <mat-form-field>
-    <input  matInput type="text"  minlength="3" name="username" id="username" #username="ngModel" ngModel required placeholder="Enter your username">
+    <input  matInput type="text"  minlength="3" name="username" #username="ngModel" ngModel required placeholder="Enter your username">
     <mat-error *ngIf="username.invalid">*Please enter longer username</mat-error>
   </mat-form-field>
   <mat-form-field>
     <input type="password" matInput name="password"  #password="ngModel" ngModel required placeholder="Enter your password">
-    <mat-error *ngIf="password.invalid">*Please enter longer username</mat-error>
   </mat-form-field>
   <mat-form-field>
     <input  type="email" matInput name="email"  #email="ngModel" ngModel required placeholder="Enter your email">
@@ -19,6 +18,8 @@
     <input type="text" matInput name="lastName" #lastName="ngModel" ngModel required placeholder="Enter your last name">
   </mat-form-field>
 
+
+  <mat-error *ngIf="errorMessage">{{errorMessage}}</mat-error>
   <button mat-raised-button color="primary" type="submit">submit</button>
   </form>
 </mat-card>
