pictures upload component

--- a/photo-showdown-frontend/src/app/header/components/header/header.component.html
+++ b/photo-showdown-frontend/src/app/header/components/header/header.component.html
@@ -1,6 +1,5 @@
 <mat-toolbar color="primary">
   Photo Showdown
-
     <ul *ngIf="!isLoggedIn" class="menu-container"><!--logged out bar-->
       <li><a href="/" mat-button>Home</a></li>
       <li><a href="/login" mat-button>Login</a></li>
@@ -8,5 +7,6 @@
     <ul *ngIf="isLoggedIn"class="menu-container"><!--logged in bar-->
       <li><a href="/" mat-button>Home</a></li>
       <li><button mat-button (click)="logout()">Logout</button></li>
+      <li><a href="/pictures" mat-button >Pictures</a></li>
     </ul>
 </mat-toolbar>
