--- a/photo-showdown-frontend/src/app/pictures/components/pictures-page/pictures-page.component.html
+++ b/photo-showdown-frontend/src/app/pictures/components/pictures-page/pictures-page.component.html
@@ -2,9 +2,13 @@
 <mat-card class="upload-menu">
   <form class="form" (submit)="onSubmit(pictureForm)" enctype="multipart/form-data" #pictureForm="ngForm">
       <input type="file" class="file-button"  [accept]="'image/jpeg,image/png'"  name="file" (change)="getFile($event)" ngModel required placeholder="Please choose a file">
-    <button mat-raised-button color="primary" type="submit">upload</button>
-    </form>
-    <mat-error *ngIf="errorMessage">{{errorMessage}}</mat-error>
+      <button mat-raised-button color="primary" type="submit">upload</button>
+      <mat-error *ngIf="errorMessage">{{errorMessage}}</mat-error>
+  </form>
   </mat-card>
+  <div class="container">
+    <img mat-card-image name="uploaded-picture" class="uploaded-picture" #uploadedPicture [src]="imageSrc">
+  </div>
+
 
 
