delete picture and view pictures

--- a/photo-showdown-frontend/src/app/pictures/components/pictures-page/pictures-page.component.css
+++ b/photo-showdown-frontend/src/app/pictures/components/pictures-page/pictures-page.component.css
@@ -21,7 +21,7 @@ mat-card{
 {
   padding-bottom: 10px
 }
-.container
+.upload-container
 {
   padding-top: 20px;
   margin: auto;
@@ -31,3 +31,4 @@ mat-card{
   justify-content: center;
   align-items: center;
 }
+
