matches list and create match created

--- a/photo-showdown-frontend/src/app/header/components/header/header.component.html
+++ b/photo-showdown-frontend/src/app/header/components/header/header.component.html
@@ -7,6 +7,7 @@
     <ul *ngIf="isLoggedIn"class="menu-container"><!--logged in bar-->
       <li><a href="/" mat-button>Home</a></li>
       <li><button mat-button (click)="logout()">Logout</button></li>
-      <li><a href="/pictures" mat-button >Pictures</a></li>
+      <li><a href="/pictures" mat-button>Pictures</a></li>
+      <li><a href="/matches" mat-button>Matches</a></li>
     </ul>
 </mat-toolbar>
