--- a/photo-showdown-frontend/src/app/matches/components/match/match.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/match/match.component.html
@@ -1,9 +1,11 @@
 <mat-card class="match-container">
   <p>Match id: {{match.id}}</p>
   <p>Match owner: {{match.ownerName}}</p>
-  <ul *ngIf="match.userNames!=null">
-    <li *ngFor="let userName of match.userNames">{{ match.userNames }}</li>
-  </ul>
+  <p>Connected users: </p>
+    <ul>
+      <li *ngFor="let userName of match.usersNames">{{ userName }} </li>
+    </ul>
+
   <span >
     <button class="enterMatchButton" color="primary" mat-raised-button>Enter</button>
   </span>
