start of lobby component+services

--- a/photo-showdown-frontend/src/app/matches/components/match/match.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/match/match.component.html
@@ -7,6 +7,6 @@
     </ul>
 
   <span >
-    <button class="enterMatchButton" color="primary" mat-raised-button>Enter</button>
+    <button class="enterMatchButton" color="primary" mat-raised-button (click)="joinMatch()">Enter</button>
   </span>
 </mat-card>
