register added to header

--- a/photo-showdown-frontend/src/app/header/components/header/header.component.html
+++ b/photo-showdown-frontend/src/app/header/components/header/header.component.html
@@ -3,6 +3,7 @@
     <ul *ngIf="!isLoggedIn" class="menu-container"><!--logged out bar-->
       <li><a href="/" mat-button>Home</a></li>
       <li><a href="/login" mat-button>Login</a></li>
+      <li><a href="/register" mat-button>Register</a></li>
     </ul>
     <ul *ngIf="isLoggedIn"class="menu-container"><!--logged in bar-->
       <li><a href="/" mat-button>Home</a></li>
