--- a/photo-showdown-frontend/src/app/matches/components/pre-game-lobby/pre-game-lobby.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/pre-game-lobby/pre-game-lobby.component.html
@@ -1,20 +1,24 @@
-<p>pre-lobby</p>
-<!-- <mat-card *ngIf="!id===owner.id" class="lobby-container">
+<mat-card class="lobby-container">
+  <h1>pre-lobby</h1>
+  <p>match id: 1</p>
+  <p>owner name: admin</p>
+  <div >
+    <h2>Users:</h2>
+    <ul class="users-container">
+      <li>user1</li>
+      <li>user2</li>
+    </ul>
+  </div>
+</mat-card>
+<!-- <mat-card  class="lobby-container">
   <p>Match owner: {{match.ownerName}}</p>
   <p>Connected users: </p>
-    <ul>
+    <ul class="users-container">
       <li *ngFor="let userName of match.usersNames">{{ userName }} </li>
     </ul>
-    <button mat-raised-button (click)="startGame()">start</button>
   <span>
-    <button class="enterMatchButton" color="primary" mat-raised-button (click)="joinMatch()">Enter</button>
+    <button *ngIf="!id===owner.id" mat-raised-button (click)="startGame()">start</button>
   </span>
 </mat-card>
-<mat-card *ngIf="!id!==owner.id"  class="lobby-container">
-  <p>Match owner: {{match.ownerName}}</p>
-  <p>Connected users: </p>
-    <ul>
-      <li *ngFor="let userName of match.usersNames">{{ userName }} </li>
-    </ul>
-</mat-card> -->
+-->
 
