--- a/photo-showdown-frontend/src/app/matches/components/match-list/match-list.component.css
+++ b/photo-showdown-frontend/src/app/matches/components/match-list/match-list.component.css
@@ -1,7 +1,7 @@
 .createMatchButton
 {
-  margin-top: 10px;
   margin-bottom: 10px;
+  margin-right: 10px;
 }
 .title
 {
@@ -16,4 +16,8 @@
   margin-right: 10%;
   margin-top:2%;
 }
+.refreshList
+{
+  margin-bottom: 10px;
 
+}
