--- a/photo-showdown-frontend/src/app/matches/components/match-list/match-list.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/match-list/match-list.component.html
@@ -1,13 +1,12 @@
 
 <div class="matches-container" *ngIf="matches.length>0">
   <mat-card-title class="title">Matches</mat-card-title>
-
-  <ul class="match-list">
     <span>
       <button class="createMatchButton" color="primary" mat-raised-button (click)="createMatch()">Create a match</button>
       <button class="refreshList" color="primary" mat-raised-button (click)="loadMatches()">Refresh</button>
     </span>
-    <p><mat-error *ngIf="errorMessage">{{errorMessage}}</mat-error></p>
-    <app-match class="match-list-item" *ngFor="let match of this.matches" [match]="match"></app-match>
-  </ul>
+    <div class="match-list">
+      <app-match class="match-list-item" *ngFor="let match of this.matches" [match]="match"></app-match>
+    </div>
 </div>
+
