--- a/photo-showdown-frontend/src/app/matches/components/pre-game-lobby/pre-game-lobby.component.css
+++ b/photo-showdown-frontend/src/app/matches/components/pre-game-lobby/pre-game-lobby.component.css
@@ -5,15 +5,25 @@
   margin-top: 2%;
   text-align: center;
   height: 50vh;
+
 }
 
 li {
   margin-left: 0;
   padding-left: 0;
 }
-ul {
+.users-container
+{
   list-style: none;
   padding: 0;
-  margin: 0;
-  list-style: none;
+
+}
+h2
+{
+  max-height: 300px;
+  margin-bottom: 0;
+}
+.inner-container
+{
+  padding-top: 2%;
 }
