--- a/photo-showdown-frontend/src/app/users/components/user-login/user-login.component.html
+++ b/photo-showdown-frontend/src/app/users/components/user-login/user-login.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <form class="form" (submit)="onSubmit(userForm)" #userForm="ngForm">
+  <form *ngIf="!isLoading" class="form" (submit)="onSubmit(userForm)" #userForm="ngForm">
     <mat-form-field>
       <input  matInput type="text"  name="username" #username="ngModel" ngModel required placeholder="Enter your username">
       
@@ -11,4 +11,5 @@
     <mat-error *ngIf="errorMessage">{{errorMessage}}</mat-error>
     <button mat-raised-button color="primary" type="submit">submit</button>
     </form>
+    <p *ngIf="isLoading">Loading...</p>
   </mat-card>
