--- a/photo-showdown-frontend/src/app/matches/components/match-list-item/match-list-item.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/match-list-item/match-list-item.component.html
@@ -3,7 +3,7 @@
   <p>Match owner: {{match.ownerName}}</p>
   <p>Connected users: </p>
     <ul>
-      <li *ngFor="let userName of match.usersNames">{{ userName }} </li>
+      <li *ngFor="let userName of match.userNames">{{ userName }} </li>
     </ul>
 
   <span >
