--- a/photo-showdown-frontend/src/app/matches/components/pre-game-lobby/pre-game-lobby.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/pre-game-lobby/pre-game-lobby.component.html
@@ -6,7 +6,7 @@
   <div>
     <h2>Users:</h2>
     <div class="users-container">
-      <div *ngFor="let userName of match?.usersNames">{{ userName }}</div>
+      <div *ngFor="let userName of match?.userNames">{{ userName }}</div>
     </div>
     <button class="disconnect" color="warn" mat-raised-button (click)="disconnect()">Disconnect</button>
   </div>
