--- a/photo-showdown-frontend/src/app/pictures/components/pictures-page/pictures-page.component.html
+++ b/photo-showdown-frontend/src/app/pictures/components/pictures-page/pictures-page.component.html
@@ -1,7 +1,15 @@
 
 <mat-card class="upload-menu">
   <form class="form" (submit)="onSubmit(pictureForm)" enctype="multipart/form-data" #pictureForm="ngForm">
-      <input type="file" class="file-button"  [accept]="'image/jpeg,image/png'"  name="file" (change)="getFile($event)" ngModel required placeholder="Please choose a file">
+      <input 
+      type="file" 
+      class="file-button"  
+      [accept]="'image/jpeg,image/png'"  
+      name="file" 
+      (change)="getFile($event)" 
+      ngModel 
+      required 
+      placeholder="Please choose a file">
       <button mat-raised-button color="primary" type="submit" [disabled]="this.pictureFile == undefined">upload</button>
   </form>
   </mat-card>
