Fix upload picture button disabled bug

--- a/photo-showdown-frontend/src/app/pictures/components/pictures-page/pictures-page.component.html
+++ b/photo-showdown-frontend/src/app/pictures/components/pictures-page/pictures-page.component.html
@@ -19,7 +19,7 @@
       mat-raised-button
       color="primary"
       type="submit"
-      [disabled]="this.usersPictures == undefined"
+      [disabled]="this.pictureFileToUpload == undefined"
     >
       upload
     </button>
