reformat user registraion

--- a/photo-showdown-frontend/src/app/users/components/user-registration/user-registration.component.html
+++ b/photo-showdown-frontend/src/app/users/components/user-registration/user-registration.component.html
@@ -1,26 +1,66 @@
 <mat-card>
-<form class="form" (submit)="onSubmit(userForm)" #userForm="ngForm">
+  <form class="form" (submit)="onSubmit(userForm)" #userForm="ngForm">
+    <mat-form-field>
+      <input
+        matInput
+        type="text"
+        minlength="3"
+        name="username"
+        #username="ngModel"
+        ngModel
+        required
+        placeholder="Enter your username"
+      />
+      <mat-error *ngIf="username.invalid"
+        >*Please enter longer username</mat-error
+      >
+    </mat-form-field>
+    <mat-form-field>
+      <input
+        type="password"
+        matInput
+        name="password"
+        #password="ngModel"
+        ngModel
+        required
+        placeholder="Enter your password"
+      />
+    </mat-form-field>
+    <mat-form-field>
+      <input
+        type="email"
+        matInput
+        name="email"
+        #email="ngModel"
+        ngModel
+        required
+        placeholder="Enter your email"
+      />
+    </mat-form-field>
+    <mat-form-field>
+      <input
+        type="text"
+        matInput
+        name="firstName"
+        #firstName="ngModel"
+        ngModel
+        required
+        placeholder="Enter your first name"
+      />
+    </mat-form-field>
+    <mat-form-field>
+      <input
+        type="text"
+        matInput
+        name="lastName"
+        #lastName="ngModel"
+        ngModel
+        required
+        placeholder="Enter your last name"
+      />
+    </mat-form-field>
 
-  <mat-form-field>
-    <input  matInput type="text"  minlength="3" name="username" #username="ngModel" ngModel required placeholder="Enter your username">
-    <mat-error *ngIf="username.invalid">*Please enter longer username</mat-error>
-  </mat-form-field>
-  <mat-form-field>
-    <input type="password" matInput name="password"  #password="ngModel" ngModel required placeholder="Enter your password">
-  </mat-form-field>
-  <mat-form-field>
-    <input  type="email" matInput name="email"  #email="ngModel" ngModel required placeholder="Enter your email">
-  </mat-form-field>
-  <mat-form-field>
-    <input type="text" matInput name="firstName"  #firstName="ngModel" ngModel required placeholder="Enter your first name">
-  </mat-form-field>
-  <mat-form-field>
-    <input type="text" matInput name="lastName" #lastName="ngModel" ngModel required placeholder="Enter your last name">
-  </mat-form-field>
-
-
-  <mat-error *ngIf="errorMessage">{{errorMessage}}</mat-error>
-  <button mat-raised-button color="primary" type="submit">submit</button>
+    <mat-error *ngIf="errorMessage">{{ errorMessage }}</mat-error>
+    <button mat-raised-button color="primary" type="submit">submit</button>
   </form>
 </mat-card>
-
