--- a/photo-showdown-frontend/src/app/users/components/user-registration/user-registration.component.html
+++ b/photo-showdown-frontend/src/app/users/components/user-registration/user-registration.component.html
@@ -1,4 +1,7 @@
 <mat-card>
+  <div class="registration-title">
+    <h2>Register an Account</h2>
+  </div>
   <form class="form" (submit)="onSubmit(userForm)" #userForm="ngForm">
     <mat-form-field>
       <input
@@ -11,13 +14,19 @@
         required
         placeholder="Enter your username"
       />
-      <mat-error *ngIf="username.invalid"
-        >*Please enter longer username</mat-error
+      <mat-error
+        *ngIf="username.invalid && (username.dirty || username.touched)"
       >
+        <span *ngIf="username.hasError('required')">Username is required.</span>
+        <span *ngIf="username.hasError('minlength')"
+          >Username must be at least 3 characters long.</span
+        >
+      </mat-error>
     </mat-form-field>
     <mat-form-field>
       <input
         type="password"
+        minlength="8"
         matInput
         name="password"
         #password="ngModel"
@@ -25,6 +34,14 @@
         required
         placeholder="Enter your password"
       />
+      <mat-error
+        *ngIf="password.invalid && (password.dirty || password.touched)"
+      >
+        <span *ngIf="password.hasError('required')">Password is required.</span>
+        <span *ngIf="password.hasError('minlength')"
+          >Password must be at least 8 characters long.</span
+        >
+      </mat-error>
     </mat-form-field>
     <mat-form-field>
       <input
@@ -34,8 +51,15 @@
         #email="ngModel"
         ngModel
         required
+        email
         placeholder="Enter your email"
       />
+      <mat-error *ngIf="email.invalid && (email.dirty || email.touched)">
+        <span *ngIf="email.hasError('required')">Email is required.</span>
+        <span *ngIf="email.hasError('email')"
+          >Enter a valid email address.</span
+        >
+      </mat-error>
     </mat-form-field>
     <mat-form-field>
       <input
@@ -47,6 +71,11 @@
         required
         placeholder="Enter your first name"
       />
+      <mat-error
+        *ngIf="firstName.invalid && (firstName.dirty || firstName.touched)"
+      >
+        First Name is required.
+      </mat-error>
     </mat-form-field>
     <mat-form-field>
       <input
@@ -58,9 +87,22 @@
         required
         placeholder="Enter your last name"
       />
+      <mat-error
+        *ngIf="lastName.invalid && (lastName.dirty || lastName.touched)"
+      >
+        Last Name is required.
+      </mat-error>
     </mat-form-field>
 
     <mat-error *ngIf="errorMessage">{{ errorMessage }}</mat-error>
-    <button mat-raised-button color="primary" type="submit">submit</button>
+    <br />
+    <button
+      mat-raised-button
+      color="primary"
+      type="submit"
+      [disabled]="userForm.invalid"
+    >
+      Submit
+    </button>
   </form>
 </mat-card>
