--- a/photo-showdown-frontend/src/app/header/components/header/header.component.html
+++ b/photo-showdown-frontend/src/app/header/components/header/header.component.html
@@ -1,16 +1,19 @@
 <mat-toolbar color="primary">
-    <p><strong >Photo Showdown</strong> Shalom {{username != undefined ? username : ""}}</p>
+  <p>
+    <strong [routerLink]="['/']">Photo Showdown</strong>
+    Shalom {{ username != undefined ? username : "" }}
+  </p>
 
-    <ul *ngIf="!isLoggedIn" class="menu-container">
-      <li><a [routerLink]="['/']"  mat-button>Home</a></li>
-      <li><a [routerLink]="['/login']"  mat-button>Login</a></li>
-      <li><a [routerLink]="['/register']"  mat-button>Register</a></li>
-    </ul>
-    
-    <ul *ngIf="isLoggedIn"class="menu-container">
-      <li><a [routerLink]="['/']" mat-button>Home</a></li>
-      <li><a [routerLink]="['/pictures']" mat-button>Pictures</a></li>
-      <li><a [routerLink]="['/game']"  mat-button>Play</a></li>
-      <li><button mat-button (click)="logout()">Logout</button></li>
-    </ul>
+  <ul *ngIf="!isLoggedIn" class="menu-container">
+    <li><a [routerLink]="['/']" mat-button>Home</a></li>
+    <li><a [routerLink]="['/login']" mat-button>Login</a></li>
+    <li><a [routerLink]="['/register']" mat-button>Register</a></li>
+  </ul>
+
+  <ul *ngIf="isLoggedIn" class="menu-container">
+    <li><a [routerLink]="['/']" mat-button>Home</a></li>
+    <li><a [routerLink]="['/pictures']" mat-button>Pictures</a></li>
+    <li><a [routerLink]="['/game']" mat-button>Play</a></li>
+    <li><button mat-button (click)="logout()">Logout</button></li>
+  </ul>
 </mat-toolbar>
