--- a/photo-showdown-frontend/src/app/matches/components/game/game.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/game/game.component.html
@@ -1,5 +1,12 @@
 <div [ngSwitch]="gameState">
-    <app-match-list *ngSwitchCase="GameState.NotStarted" (onJoinMatch)="redirectToLobby($event)"></app-match-list>
-    <app-pre-game-lobby *ngSwitchCase="GameState.InLobby" [matchId]="matchId!" (onDisconnect)="disconnect()"></app-pre-game-lobby>
-    <p *ngSwitchCase="GameState.InMatch">In Match lol xD</p>
+  <app-match-list
+    *ngSwitchCase="GameState.NotStarted"
+    (onJoinMatch)="redirectToLobby($event)"
+  ></app-match-list>
+  <app-pre-game-lobby
+    *ngSwitchCase="GameState.InLobby"
+    [matchId]="matchId!"
+    (onDisconnect)="disconnect()"
+  ></app-pre-game-lobby>
+  <p *ngSwitchCase="GameState.InMatch">In Match lol xD</p>
 </div>
