--- a/photo-showdown-frontend/src/app/matches/components/match-list/match-list.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/match-list/match-list.component.html
@@ -1,11 +1,28 @@
-
-<div class="matches-container" >
+<div class="matches-container">
   <mat-card-title class="title">Matches</mat-card-title>
-    <span>
-      <button class="createMatchButton" color="primary" mat-raised-button (click)="createMatch()">Create a match</button>
-      <button class="refreshList" color="primary" mat-raised-button (click)="loadMatches()">Refresh</button>
-    </span>
-    <div class="match-list"*ngIf="matches.length>0">
-      <app-match-list-item *ngFor="let match of this.matches" [match]="match" (onJoinMatch)="joinedMatch($event)"></app-match-list-item>
-    </div>
+  <span>
+    <button
+      class="createMatchButton"
+      color="primary"
+      mat-raised-button
+      (click)="createMatch()"
+    >
+      Create a match
+    </button>
+    <button
+      class="refreshList"
+      color="primary"
+      mat-raised-button
+      (click)="loadMatches()"
+    >
+      Refresh
+    </button>
+  </span>
+  <div class="match-list" *ngIf="matches.length > 0">
+    <app-match-list-item
+      *ngFor="let match of this.matches"
+      [match]="match"
+      (onJoinMatch)="joinedMatch($event)"
+    ></app-match-list-item>
+  </div>
 </div>
