--- a/photo-showdown-frontend/src/app/matches/components/pre-game-lobby/pre-game-lobby.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/pre-game-lobby/pre-game-lobby.component.html
@@ -9,6 +9,17 @@
       <h2>Match Settings:</h2>
       <form>
         <div class="form-group">
+          <label for="sentences">Sentences (comma-separated):</label>
+          <input
+            type="text"
+            id="sentences"
+            [(ngModel)]="matchSettings.sentences"
+            name="sentences"
+            rows="5"
+          />
+        </div>
+
+        <div class="form-group">
           <label for="pictureSelectionTime"
             >Picture Selection Time (seconds):</label
           >
@@ -66,7 +77,6 @@
       <div class="users-container">
         <div *ngFor="let user of match?.users">{{ user.username }}</div>
       </div>
-
       <button
         class="disconnect"
         color="warn"
