--- a/photo-showdown-frontend/src/app/users/components/user-registration/user-registration.component.html
+++ b/photo-showdown-frontend/src/app/users/components/user-registration/user-registration.component.html
@@ -100,7 +100,7 @@
       mat-raised-button
       color="primary"
       type="submit"
-      [disabled]="userForm.invalid"
+      [disabled]="userForm.invalid || isLoading"
     >
       Submit
     </button>
