--- a/photo-showdown-frontend/src/app/pictures/components/picture-grid-item/picture-grid-item.component.css
+++ b/photo-showdown-frontend/src/app/pictures/components/picture-grid-item/picture-grid-item.component.css
@@ -1,14 +1,18 @@
-
-.picture-container
-{
+.picture-container {
   display: inline-block;
   position: relative;
 }
+
 .overlay {
   position: absolute;
   top: 0;
   right: 0; /* Move "X" icon to the top right corner */
-  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent overlay background for the "X" icon */
+  background-color: rgba(
+    0,
+    0,
+    0,
+    0.5
+  ); /* Semi-transparent overlay background for the "X" icon */
   padding: 5px; /* Add some padding around the "X" icon */
   color: white;
   font-size: 24px;
