--- a/photo-showdown-frontend/src/app/pictures/components/picture-item/picture-item.component.css
+++ b/photo-showdown-frontend/src/app/pictures/components/picture-item/picture-item.component.css
@@ -1,12 +1,16 @@
+/* image.component.css */
 .image-container {
     overflow: hidden;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 20vw; /* Set the width to 30% of the viewport width */
+    height: 20vw; /* Set the height to 30% of the viewport width */
   }
   
   .image {
     width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: contain; /* Maintain aspect ratio and fit inside the container */
     display: block;
   }
   
