Designed match list

--- a/photo-showdown-frontend/src/app/matches/components/match-list-item/match-list-item.component.css
+++ b/photo-showdown-frontend/src/app/matches/components/match-list-item/match-list-item.component.css
@@ -1,10 +1,7 @@
-.match-container
-{
-  margin-right:40px;
-  margin-top: 10px;
+.match-container {
+  margin: 3%;
 }
 
-.enterMatchButton
-{
+.enter-match-button {
   float: right;
 }
