--- a/photo-showdown-frontend/src/app/matches/components/match-list/match-list.component.css
+++ b/photo-showdown-frontend/src/app/matches/components/match-list/match-list.component.css
@@ -1,22 +1,24 @@
-.createMatchButton
-{
+.create-match-button {
   margin-bottom: 10px;
   margin-right: 10px;
 }
-.title
-{
+
+.title {
   margin: 0 auto;
   text-decoration: underline;
   text-align: center;
   font-size: x-large;
+  margin-bottom: 17px;
 }
-.matches-container
-{
-  margin-left:  10%;
-  margin-right: 10%;
-  margin-top:2%;
+
+.matches-container {
+  /* margin-left: 10%;
+  margin-right: 10%; */
+  margin: 0 auto;
+  margin-top: 2%;
+  width: 60vh;
 }
-.refreshList
-{
+
+.refresh-list {
   margin-bottom: 10px;
 }
