--- a/photo-showdown-frontend/src/app/matches/components/match-list/match-list.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/match-list/match-list.component.html
@@ -2,7 +2,7 @@
   <mat-card-title class="title">Matches</mat-card-title>
   <span>
     <button
-      class="createMatchButton"
+      class="create-match-button"
       color="primary"
       mat-raised-button
       (click)="createMatch()"
@@ -10,7 +10,7 @@
       Create a match
     </button>
     <button
-      class="refreshList"
+      class="refresh-list"
       color="primary"
       mat-raised-button
       (click)="loadMatches()"
@@ -18,7 +18,7 @@
       Refresh
     </button>
   </span>
-  <div class="match-list" *ngIf="matches.length > 0">
+  <div  *ngIf="matches.length > 0">
     <app-match-list-item
       *ngFor="let match of this.matches"
       [match]="match"
