--- a/photo-showdown-frontend/src/app/matches/components/match-list-item/match-list-item.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/match-list-item/match-list-item.component.html
@@ -1,12 +1,21 @@
-<mat-card class="match-container">
-  <p>Match id: {{match.id}}</p>
-  <p>Match owner: {{match.owner.username}}</p>
-  <p>Connected users: </p>
+<mat-card>
+  <div class="match-container">
+    <h3>Match id: {{ match.id }}</h3>
+    <h3>Match owner: {{ match.owner.username }}</h3>
+    <h3>Connected users:</h3>
     <ul>
-      <li *ngFor="let user of match.users">{{ user.username }} </li>
+      <li *ngFor="let user of match.users">{{ user.username }}</li>
     </ul>
 
-  <span >
-    <button class="enterMatchButton" color="primary" mat-raised-button (click)="joinMatch()">Enter</button>
-  </span>
+    <span>
+      <button
+        class="enter-match-button"
+        color="primary"
+        mat-raised-button
+        (click)="joinMatch()"
+      >
+        Enter
+      </button>
+    </span>
+  </div>
 </mat-card>
