Rename game main screen + pre match lobby components

--- a/photo-showdown-frontend/src/app/matches/components/game-main-screen/game-main-screen.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/game-main-screen/game-main-screen.component.html
@@ -3,12 +3,12 @@
     *ngSwitchCase="GameState.NotStarted"
     (onJoinMatch)="redirectToLobby($event)"
   ></app-match-list>
-  <app-pre-game-lobby
+  <app-pre-match-lobby
     *ngSwitchCase="GameState.InLobby"
     [matchId]="matchId!"
     (onDisconnect)="disconnect()"
     (onMatchStart)="redirectToMatch()"
-  ></app-pre-game-lobby>
+  ></app-pre-match-lobby>
   <p *ngSwitchCase="GameState.InMatch">In Match lol xD</p>
   <app-in-match
     *ngSwitchCase="GameState.InMatch"
