--- a/photo-showdown-frontend/src/app/matches/components/pre-match-lobby/pre-match-lobby.component.css
+++ b/photo-showdown-frontend/src/app/matches/components/pre-match-lobby/pre-match-lobby.component.css
@@ -39,9 +39,8 @@ h2 {
 }
 
 .disconnect-button {
-  margin: 10px;
   position: absolute;
-  bottom: 0;
+  bottom: 2%;
   left: 50%;
   transform: translateX(-50%);
 }
