--- a/photo-showdown-frontend/src/app/matches/components/in-match/in-match.component.html
+++ b/photo-showdown-frontend/src/app/matches/components/in-match/in-match.component.html
@@ -1,8 +1,7 @@
-<div>
+<div class="in-match-container">
   <h2>Current Round Details:</h2>
   <p>Match Id: {{ this.currentRound.matchId }}</p>
   <p>Round Index: {{ this.currentRound.roundIndex }}</p>
   <p>Round State: {{ this.currentRound.roundState }}</p>
   <p>Sentence: {{ this.currentRound.sentence }}</p>
-  <p>Start Date: {{ this.currentRound.startDate }}</p>
 </div>
